# AssistiveDomotical

./: README.md  abcClasses.py  criandoTabelas.py  equacoes.py  explore.py  final_model-2.joblib  main.py  menu.py  menuInterface.py  menuMainClass.py  modelo_piscando.joblib  mouse.py  observableMediaPipe.py  observadoMainClass.py  observadorMainClass.py  observerClasses.py  pyproject.toml  requirements.txt  teste.py  windows.py
OSEMN/colabs/: explore.ipynb  model.ipynb  obtain.ipynb  srub.ipynb
OSEMN/explore/: explore.py  grafico_pontos_olho.py  teste.py
OSEMN/model/: model.py  model_ear.py  model_pontos.py
OSEMN/obtain/: ajustandoAnotacoes.py  creatingVideos.py  criandoTabelas.py  juntandoTabelas.py
OSEMN/obtain/tabelasBrutas/: bruno.mp4MP.csv  erik.csv  felipe.csv
OSEMN/scrub/: arrumandoFrames.py  criando_tabelaPiscadas.py  limpezaDlib.py  limpezaMP.py
OSEMN/scrub/tabelasLimpas/: tabela_tratada_dlib.csv  tabela_tratada_mp.csv
OSEMN/scrub/tabelas_pessoa_pos_tratamento/: bruno.csv  erik.csv  felipe.csv  guilherme.csv  jao.csv  jose.csv  lo.csv
creatingTables/: creatingVideos.py  teste.py
explore/: explore.py
model/: RFModel.py
modulesObservers/: blinkVisualizer.py  coletorDados.py  menuMainClass.py  windows.py
observables/: observableDlib.py  observableMediaPipe.py
padroes/: abcClasses.py  equacoes.py
tabelas/: saida.aviDLIB.csv  total.mp4DLIB.csv  totalDLIB.csv
