[tool.poetry]
name = "assistivedomotic"
version = "0.1.0"
description = ""
authors = ["Barradas13 <febarradas13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cmake = "^3.30.5"
dlib = "^19.24.6"
numpy = "^2.1.2"
opencv-python = "^4.10.0.84"
pysimplegui = "~4.60.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
