[tool.poetry]
name = "assistivedomotic"
version = "0.1.0"
description = ""
authors = ["Barradas13 <febarradas13@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
cmake = "^3.30.5"
dlib = "^19.24.6"
numpy = "<2.0.0"
opencv-python = "^4.10.0.84"
keyboard = "^0.13.5"
mediapipe = "^0.10.21"
pandas = "^2.3.0"
wxpython = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
