[tool.poetry]
name = "assistivedomotic"
version = "0.1.0"
description = ""
authors = ["Barradas13 <febarradas13@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
cmake = "^3.30.5"
dlib = "^19.24.6"
numpy = ">2.1.0"
opencv-python = "^4.10.0.84"
keyboard = "^0.13.5"
pandas = "^2.3.0"
pynput = "^1.8.1"
seaborn = "^0.13.2"
scikit-learn = "^1.7.1"
joblib = "^1.5.1"
tensorflow = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
